# bimanual_dexterous_mvp_ws

./: .gitignore  README.md  双臂灵巧手_MVP_Pick_and_Place占位方案.txt
dependencies/: franka_ros2_humble.repos
doc/hand/: README.md  fr3_rh56dfx_rviz_visualization.md  rh56_angle_cmd.py  rh56_watch.py
doc/hardware/: fr3_rh56_api_integration.md  hardware_baseline.md
doc/mvp0/acceptance/: build_and_test_result.md  interface_snapshot.md  known_limitations.md  mvp0_completion_checklist.md
doc/mvp0/tasks/: 00_MVP0_总体任务说明.md  01_MVP0_工程绿色基线总结.md  02_MVP0_首批最小接口任务说明.md  03_MVP0_Fake场景管理器任务说明.md  04_MVP0_Fake机械臂控制器任务说明.md  05_MVP0_最小任务编排节点任务说明.md  06_MVP0_一键启动与集成验收任务说明.md
doc/mvp1/acceptance/: build_and_test_result.md  interface_snapshot.md  known_limitations.md  mvp1_completion_checklist.md
doc/mvp1/tasks/: 00_MVP1_总体任务说明.md  01_MVP1_接口与配置冻结.md  02_MVP1_Fake场景物体状态扩展.md  03_MVP1_Fake手部控制器.md  04_MVP1_Fake末端操作节点.md  05_MVP1_Fake机械臂多目标扩展.md  06_MVP1_PickAndPlace任务编排节点.md  07_MVP1_一键启动与集成验收.md  08_MVP1_收尾冻结与验收证据.md
doc/mvp2/acceptance/: README.md  task02_fr3_moveit_config_result.md  task05_moveit_scene_manager_result.md
doc/mvp2/tasks/: 00_MVP2_总体任务说明.md  01_MVP2_FR3_MoveIt接口与配置冻结.md  02_MVP2_FR3模型与MoveIt配置接入.md  03_MVP2_MoveItArmControl适配节点.md  04_MVP2_PlanningScene物体接入.md  05_MVP2_AttachedCollisionObject抓取放置.md  06_MVP2_PickAndPlace任务编排接入.md  07_MVP2_RViz一键启动与集成验收.md  08_MVP2_测试与失败路径.md  09_MVP2_收尾冻结与验收证据.md
doc/mvp3/acceptance/: README.md
doc/mvp3/tasks/: 00_MVP3_总体任务说明.md  01_MVP3_接口与仿真配置冻结.md  02_MVP3_MuJoCo场景与模型加载.md  03_MVP3_ROS2MuJoCo桥接与仿真时间.md  04_MVP3_仿真机械臂轨迹执行.md  05_MVP3_物体状态同步与场景重置.md  06_MVP3_夹爪化RH56与确定性抓取约束.md  07_MVP3_PickAndPlace任务编排接入.md  08_MVP3_测试与失败路径.md  09_MVP3_收尾冻结与验收证据.md
doc/post_mvp/: 01_单臂航空插头预对准与柔顺插接概述.md  03_单臂航空插头预对准与柔顺插接概述.md  README.md
doc/post_mvp/acceptance/post_mvp1/: README.md
src/assembly_bringup/: CMakeLists.txt  package.xml
src/assembly_bringup/launch/: mvp0_fake_system.launch.py  mvp1_fake_pick_place.launch.py
src/assembly_interfaces/: CMakeLists.txt  package.xml
src/assembly_interfaces/action/: MoveArm.action
src/assembly_interfaces/msg/: TaskState.msg
src/assembly_interfaces/srv/: AttachObject.srv  ControlHand.srv  DetachObject.srv  ExecuteTerminalOperation.srv  GetObjectPose.srv  ResetScene.srv  StartTask.srv
src/assembly_task/: package.xml  setup.cfg  setup.py
src/assembly_task/assembly_task/: assembly_task_node.py
src/assembly_task/config/: mvp1_pick_and_place.yaml  mvp2_moveit_pick_and_place.yaml
src/assembly_tests/: CMakeLists.txt  package.xml
src/assembly_tests/test/: test_mvp0_task_flow.py  test_mvp1_pick_and_place_flow.py
src/fake_arm_control/: package.xml  setup.cfg  setup.py
src/fake_arm_control/fake_arm_control/: fake_arm_control_node.py
src/fake_arm_control/test/: test_move_arm_action.py  test_pep257.py
src/fake_hand_control/: package.xml  setup.cfg  setup.py
src/fake_hand_control/fake_hand_control/: fake_hand_control_node.py
src/fake_hand_control/test/: test_control_hand_service.py
src/fake_scene_manager/: package.xml  setup.cfg  setup.py
src/fake_scene_manager/fake_scene_manager/: __init__.py  fake_scene_manager_node.py
src/fake_terminal_operation/: package.xml  setup.cfg  setup.py
src/fake_terminal_operation/fake_terminal_operation/: fake_terminal_operation_node.py
src/fake_terminal_operation/test/: test_terminal_operation_service.py
src/moveit_arm_control/: CMakeLists.txt  package.xml
src/moveit_arm_control/src/: moveit_arm_control_node.cpp
src/moveit_scene_manager/: CMakeLists.txt  package.xml
src/moveit_scene_manager/src/: moveit_scene_manager_node.cpp
