<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assembly_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for the MVP-0 fake assembly system</description>
  <maintainer email="3526623168@qq.com">ace</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>assembly_task</exec_depend>
  <exec_depend>fake_arm_control</exec_depend>
  <exec_depend>fake_scene_manager</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
