<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assembly_tests</name>
  <version>0.0.0</version>
  <description>Integration tests for the fake assembly MVP systems</description>
  <maintainer email="3526623168@qq.com">ace</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>assembly_bringup</test_depend>
  <test_depend>assembly_interfaces</test_depend>
  <test_depend>assembly_task</test_depend>
  <test_depend>fake_arm_control</test_depend>
  <test_depend>fake_hand_control</test_depend>
  <test_depend>fake_scene_manager</test_depend>
  <test_depend>fake_terminal_operation</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
